lab 4 checked off
didn't have the stupid__RCC_DAC1_CLK enable at the top (MX didn't put it in)

--- a/Lab_4/platformio.ini
+++ b/Lab_4/platformio.ini
@@ -11,8 +11,8 @@
 [env:nucleo_l432kc]
 platform = ststm32
 board = nucleo_l432kc
-framework = cmsis
-;framework = stm32cube
+; framework = cmsis
+framework = stm32cube
 extra_scripts = scripts/fpufix.py
 ; Why the "-I" build flags below? One the one hand, PlatformIO wants all .h
 ; files to be in the project-name/include directory (which is where we put
@@ -28,4 +28,4 @@ build_flags =
 	-Isrc/freertos/portable/GCC/ARM_CM4F
 	-Iinclude/freertos
 	-DLL_DEFINES_SYSTEMCORECLOCK
-;	-DUSE_HAL
+	-DUSE_HAL
